--- a/createFeatureLayer.html
+++ b/createFeatureLayer.html
@@ -16,14 +16,16 @@ heigth:100%;
 
 <body>
 <script>
-require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geometry/Point","dojo/domReady!"],function(Map,MapView,FeatureLayer,Point){
+require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geometry/Point","esri/core/Collection","dojo/domReady!"],function(Map,MapView,FeatureLayer,Point,Collection){
   var map = new Map({
       basemap:"topo"
   });
   
   var view = new MapView({
     container:"viewDiv",
-    map:map
+    map:map,
+    center:[120,30],
+    zoom:6
   });
   var fields =[{
   name:"ObjectID",
