--- a/createGraphicsLayer.html
+++ b/createGraphicsLayer.html
@@ -16,7 +16,7 @@ heigth:100%;
 
 <body>
 <script>
-require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geometry/Point","esri/core/Collection","dojo/domReady!"],function(Map,MapView,FeatureLayer,Point,Collection){
+require(["esri/Map","esri/views/MapView","esri/layers/GraphicsLayer","esri/geometry/Point","esri/core/Collection","dojo/domReady!"],function(Map,MapView,GraphicsLayer,Point,Collection){
   var map = new Map({
       basemap:"topo"
   });
@@ -27,11 +27,6 @@ require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geomet
     center:[120,30],
     zoom:6
   });
-  var fields =[{
-  name:"ObjectID",
-  alias:"ObjectID",
-  type:"oid"
-  }];
   var graphic = {
      geometry:new Point({
      x:120,
@@ -42,11 +37,12 @@ require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geomet
      objectID:0
      }
   };  
-   var  source = new Collection();
-   source.add(graphic);
-   var renderer = {
-      type:"simple",
-      symbol:{
+   var  graphics = new Collection();
+   graphics.add(graphic);
+   
+  var graphicslayer = new GraphicsLayer({
+   graphics:graphics,
+   symbol:{
          type:"simple-marker",
          color:"#ff0000",
          size:20,
@@ -55,21 +51,12 @@ require(["esri/Map","esri/views/MapView","esri/layers/FeatureLayer","esri/geomet
            color:"#00ff00"
          }
       }
-   };
-   
-  var featurelayer = new FeatureLayer({
-  objectIdField:"ObjectID",
-  fields:fields,
-  source:source,
-  geometryType:"point",
-  spatialReference:{wkid:4326},
-  renderer:renderer
   });
   
-  map.add(featurelayer);
+  map.add(graphicslayer);
   
   view.then(function(){
-     featurelayer.then(function(){
+     graphicslayer.then(function(){
        //success
      });
   })
