--- a/createGraphicsLayer.html
+++ b/createGraphicsLayer.html
@@ -35,14 +35,8 @@ require(["esri/Map","esri/views/MapView","esri/layers/GraphicsLayer","esri/Graph
      }),
      attributes:{
      objectID:0
-     }
-  });  
-   var  graphics = new Collection();
-   graphics.add(graphic);
-   
-  var graphicslayer = new GraphicsLayer({
-   graphics:graphics,
-   symbol:{
+     },
+     symbol:{
          type:"simple-marker",
          color:"#ff0000",
          size:20,
@@ -51,6 +45,12 @@ require(["esri/Map","esri/views/MapView","esri/layers/GraphicsLayer","esri/Graph
            color:"#00ff00"
          }
       }
+  });  
+   var  graphics = new Collection();
+   graphics.add(graphic);
+   
+  var graphicslayer = new GraphicsLayer({
+   graphics:graphics
   });
   
   map.add(graphicslayer);
