--- a/DrawPolyline.html
+++ b/DrawPolyline.html
@@ -15,7 +15,7 @@ height:100%;
 </head>
 <body>
 <script>
-require(["esri/Map","esri/MapView","esri/views/2d/draw/Draw","esri/Graphic","dojo/domReady!"],function(Map,MapView,Draw,Graphic){
+require(["esri/Map","esri/views/MapView","esri/views/2d/draw/Draw","esri/Graphic","dojo/domReady!"],function(Map,MapView,Draw,Graphic){
 
 var map = new Map({
 basemap:"topo"
