--- a/DrawPolyline.html
+++ b/DrawPolyline.html
@@ -81,7 +81,7 @@ function createPolylineGraphic(vertices){
       join: "round"
     }
  });
- view.graphic.add(graphic);
+ view.graphics.add(graphic);
 }
 
 });
