--- a/esriBasemap/esriBasemap.html
+++ b/esriBasemap/esriBasemap.html
@@ -104,7 +104,8 @@
      });
      //osm:并非acgisserver发布的服务
      var EsriOsmlayer =new WebTileLayer({
-      urlTemplate:"https://b.tile.openstreetmap.org/{level}/{col}/{row}.png"
+      urlTemplate:"https://{subDomain}.tile.openstreetmap.org/{level}/{col}/{row}.png",
+      subDomains:["a","b","c"]
      });
      //dark-gray-vector
      var EsriDarkgrayvectorlayer =new VectorTileLayer({
@@ -144,7 +145,7 @@
 
 
       var map = new Map({
-      basemap:"satellite"
+      //basemap:"osm"
       // layers:[EsriSatellitelayer]//satellite
       // layers:[EsriSatellitelayer,EsriHybridlayer]//hybrid
       //layers:[EsriTopolayer]//topo
@@ -153,7 +154,7 @@
       //layers:[EsriOceanslayer]//oceans
       //layers:[EsriNationalgeographiclayer]//national-geographic
       //layers:[EsriTerrainlayer]//terrain
-      //layers:[EsriOsmlayer]//osm
+      layers:[EsriOsmlayer]//osm
       //layers:[EsriDarkgrayvectorlayer]//dark-gray-vector
       //layers:[EsriGrayvectorlayer]//gray-vector
       //layers:[EsriStreetsvectorlayer]//streets-vector
